[project]
name = "aaa"
version = "0.1.0"
description = ""
authors = [
    {name = "ali"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.10.1,<5.0.0)",
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "email-validator (>=2.2.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
